# Aganitha-task

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  comprehensive_validation.py  debug_jj.py  pyproject.toml  setup_test_pypi.py  test.txt
research_scout_cli/: cli.py  pyproject.toml
src/research_scout/: __init__.py  commander.py  company_finder.py  data_writer.py  paper_hunter.py  research_types.py  utils.py
src/research_scout_cli/: __init__.py  cli.py
tests/: test_pubmed_fetcher.py
