[tool.poetry]
name = "research-scout"
version = "0.1.1a0"
description = "A Python library for identifying pharmaceutical and biotech industry authors in research papers"
authors = ["Research Scout Team <team@researchscout.example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/vishnutej000/Aganitha-task"
repository = "https://github.com/vishnutej000/Aganitha-task"
documentation = "https://github.com/vishnutej000/Aganitha-task#readme"
keywords = ["pubmed", "pharmaceutical", "biotech", "research", "academic", "industry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
packages = [{include = "research_scout", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
click = "^8.1.7"
pandas = "^2.0.0"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.5.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
# CLI tool that uses the research_scout module
research-scout-cli = "research_scout_cli.cli:main"
# Task requirement: executable named get-papers-list
get-papers-list = "research_scout_cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
